# basic-synethic-datasets

./: .env.example  .gitignore  README.md  eval-langfuse.py  eval.py  main.py  pyproject.toml  run_evaluation.py
files/: sample_article.md
