[project]
name = "jdn-synthetic-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evaluate>=0.4.3",
    "langchain>=0.3.25",
    "langchain-openai>=0.2.0",
    "langfuse>=2.60.7",
    "mlflow>=2.22.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
